@@ -11846,7 +11846,6 @@ How to edit a tweet is determined by `twittering-update-status-funcion'."
   (interactive)
   (let ((id (get-text-property (point) 'id))
 	(text (copy-sequence (get-text-property (point) 'text)))
-	(user (get-text-property (point) 'username))
 	(width (max 40 ;; XXX
 		    (- (frame-width)
 		       1 ;; margin for wide characters
@@ -11855,17 +11854,15 @@ How to edit a tweet is determined by `twittering-update-status-funcion'."
 		    )))
     (set-text-properties 0 (length text) nil text)
     (if id
-	(if (not (string= user twittering-username))
-	    (let ((mes (format "Retweet \"%s\"? "
-			       (if (< width (string-width text))
-				   (concat
-				    (truncate-string-to-width text (- width 3))
-				    "...")
-				 text))))
-	      (if (y-or-n-p mes)
-		  (twittering-call-api 'retweet `((id . ,id)))
-		(message "Request canceled")))
-	  (message "Cannot retweet your own tweet"))
+	(let ((mes (format "Retweet \"%s\"? "
+			   (if (< width (string-width text))
+			       (concat
+				(truncate-string-to-width text (- width 3))
+				"...")
+			     text))))
+	  (if (y-or-n-p mes)
+	      (twittering-call-api 'retweet `((id . ,id)))
+	    (message "Request canceled")))
       (message "No status selected"))))
 
 ;;;; Commands for browsing information related to a status
